tree-sitter-rftex/test/corpus/commands.txt
================================================================================
Bare command
================================================================================
\qed
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)))

================================================================================
Starred command name
================================================================================
\section*
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)))

================================================================================
Command with two arguments
================================================================================
\section{the-crime}{The crime}
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (group
      (text))
    (group
      (text))))

================================================================================
One space after a command name is swallowed
================================================================================
\code{1355\ldots 48de}
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (group
      (text)
      (command
        (command_name))
      (text))))

================================================================================
Symbol options
================================================================================
\includegraphics[grayscale,portrait]{/images/x.webp}
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (options
      (option)
      (option))
    (group
      (text))))

================================================================================
Free-form bracket argument
================================================================================
\bibref[p. 5]{stepanov-eop}
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (options
      (option))
    (group
      (text))))

================================================================================
Option lists trim whitespace around options
================================================================================
\includegraphics[a , b]{x}
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (options
      (option)
      (option))
    (group
      (text))))

================================================================================
Empty URL argument parses for half-typed input
================================================================================
\href{}
--------------------------------------------------------------------------------

(source_file
  (url_command
    (url_command_name)
    (url_group)))

================================================================================
URL argument keeps percent, ampersand and hash literal
================================================================================
\href{https://en.wikipedia.org/wiki/Read%E2%80%93eval?a=1&b=2#top}{REPL}
--------------------------------------------------------------------------------

(source_file
  (url_command
    (url_command_name)
    (url_group
      (url))
    (group
      (text))))

================================================================================
Unknown command falls back to the generic rule
================================================================================
\nosuchcommand{arg}
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (group
      (text))))

================================================================================
Bracket after a command name is an option list
================================================================================
\ldots [note]
--------------------------------------------------------------------------------

(source_file
  (command
    (command_name)
    (options
      (option))))
