tree-sitter-rftex/test/corpus/text.txt
================================================================================
Plain text
================================================================================
hello
--------------------------------------------------------------------------------

(source_file
  (text))

================================================================================
Escaped characters
================================================================================
100\% \\ \& \# \_ \{ \} \$
--------------------------------------------------------------------------------

(source_file
  (text)
  (escaped_char)
  (text)
  (escaped_char)
  (text)
  (escaped_char)
  (text)
  (escaped_char)
  (text)
  (escaped_char)
  (text)
  (escaped_char)
  (text)
  (escaped_char)
  (text)
  (escaped_char))

================================================================================
Comment is skipped, newline included
================================================================================
% a comment
hello
--------------------------------------------------------------------------------

(source_file
  (comment)
  (text))

================================================================================
Comment used as a line continuation
================================================================================
backtracking---%
the need to add strokes
--------------------------------------------------------------------------------

(source_file
  (text)
  (comment)
  (text))

================================================================================
Group with nested text
================================================================================
{abc {def} ghi}
--------------------------------------------------------------------------------

(source_file
  (group
    (text)
    (group
      (text))
    (text)))

================================================================================
Brackets outside an option position are text
================================================================================
see [1] and ]
--------------------------------------------------------------------------------

(source_file
  (text)
  (text)
  (text))

================================================================================
Quotations stay plain text
================================================================================
``mmap'' means it
--------------------------------------------------------------------------------

(source_file
  (text))
